2008-11-03  Janne Jalkanen <jalkanen@apache.org>

        * Merged changes from 2.8: JSPWIKI-407.

2008-11-02  Janne Jalkanen <jalkanen@apache.org>

        * Merged changes from 2.8 branch: JSPWIKI-288, JSPWIKI-406,
		JSPWIKI-348, JSPWIKI-389, JSPWIKI-138

2008-10-26  Janne Jalkanen <jalkanen@apache.org>

        * Added the 3.0 API definition interfaces from the SVN.

2008-10-17  Janne Jalkanen <jalkanen@apache.org>

        * Merged fixes from 2.8.0 branch

        * JSPWIKI-400: Chinese core pages were corrupted.

2008-10-14  Janne Jalkanen <jalkanen@apache.org>

        * 2.8.0-beta-21
        
        * [JSPWIKI-398] Pages with spaces in them caused erratic rename
        behaviour by renaming all the links on the page.

2008-10-14  Andrew Jaquith <ajaquith AT apache DOT org>

        * 2.8.0-beta-20

        * [JSPWIKI-313] ShortURLConstructor was not creating URLs for the LOGIN
        context correctly. We now check for this context specifically.

2008-10-13  Andrew Jaquith <ajaquith AT apache DOT org>

        * 2.8.0-beta-19

        * [JSPWiki-342] Resolved issue by removing outdated doc files.

        * [JSPWIKI-345] Added unit tests for testing single user policies. Confirmed bug
        and workaround but did not fix root cause (freshcookies-security bug).

2008-10-06  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.8.0-beta-18

        * [JSPWIKI-395] One more xhtml issue in plain.jsp. Not what you'd expected ;-)
 
         
2008-10-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.8.0-beta-17

        * [JSPWIKI-395] Few fixes to improve xhtml compliance.
        (txs to the wonderful tools of Andrew ;-)
        

2008-10-05  Harry Metske <harry.metske@gmail.com>

        * Updated LICENSE and NOTICE file quite a couple of resources (most of them Apache licensed)
        
        * a few minor updates to Compiling.txt, UPGRADING and ReleaseNotes

2008-10-05  Dirk Frederickx <dirk.frederickx@gmail.com>
